@@ -26,6 +26,8 @@ performance improvements:
 - fixing lifting of new knapsack items which are negated items of already included items, this previously could lead to very long presolving
 - fixed performance issue in presolving w.r.t. to computing the number of new fixings, aggregated, and so on before a 
   constraint handler presolver is called
+- in case of adding constraints during pricing with initial flag set to TRUE, we add now these constraints 
+  after the pricing round to the LP
 
 fixed bugs:
 - fixed bug in heur_subnlp when initialized starting values of a fixed variable in the NLP of the subscip
